--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start": "react-scripts start --openssl-legacy-provider"
   },
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
